Stop highlighting the colorinfo widget when moving the SL selector out of bounds

--- a/src/styles/ColorInfo.scss
+++ b/src/styles/ColorInfo.scss
@@ -4,6 +4,7 @@
 	width: 128px;
   height: 256px;
   margin: 0 5px;
+  user-select: none;
 
   .Swatch {
     display: flex;
